--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+/* Starting CSS */
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html{
+  scroll-behavior: smooth;
 }
+*{
+  box-sizing: border-box;
+}
+body{
+  background-color: #040714;
+  color: #f9f9f9;
+  font-family: Avenir-Roman, sans-serif;
+  margin: 0;
+  padding:0;
+
+}
+a{
+  color: #f9f9f9;
+  text-decoration: none;
+}
+/* Media Querries */
+/* For Large Devices */
+@media only screen and (min-width:768px){
+  body{
+    font-size: 16px;
+  }
+}
+/* for Medium devices */
+  @media only screen and (min-width:480px) and (max-width:768px){
+    body{
+      font-size: 15px;
+    }
+  }
+  /* For very small devices */
+  @media only screen and (max-width:479px){
+    body{
+      font-size: 14px;
+    }
+  }
+
+
